syntax = "proto3";

package type_repeated;

option go_package = "xgo/tests/pb/pbbases";

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

import "tests/proto/module/external.proto";

import "tests/proto/cases/bases/private.proto";

import "proto/json.proto";

// EnumRepeated1 used tests cases in this file.
enum EnumRepeated1 {
  Zero  = 0;
  One   = 2;
  Two   = 3;
  Three = 5;
  Four  = 6;
  Five  = 7;
  Six   = 9;
  Seven = 11;
  Eight = 12;
  Nine  = 15;
  Ten   = 17;
}

// MessageRepeated1 used tests cases in this file.
message MessageRepeated1 {
  message Embed1 {
    message Embed2 {
      string f_string1 = 1 [ (json.field) = { } ];
      string f_string2 = 2 [ (json.field) = { } ];
      string f_string3 = 3 [ (json.field) = { } ];
    }
    string f_string1 = 1 [ (json.field) = { } ];
    string f_string2 = 2 [ (json.field) = { } ];
    string f_string3 = 3 [ (json.field) = { } ];
  }
  string f_string1 = 1 [ (json.field) = { } ];
  string f_string2 = 2 [ (json.field) = { } ];
  string f_string3 = 3 [ (json.field) = { } ];
}

// Test case for field Repeated.
message TypeRepeated1 {
  repeated string f_string1 = 1 [ (json.field) = { } ];
  repeated string f_string2 = 2 [ (json.field) = { } ];

  repeated int32    f_int32    = 11 [ (json.field) = { } ];
  repeated int64    f_int64    = 12 [ (json.field) = { } ];
  repeated uint32   f_uint32   = 13 [ (json.field) = { } ];
  repeated uint64   f_uint64   = 14 [ (json.field) = { } ];
  repeated sint32   f_sint32   = 15 [ (json.field) = { } ];
  repeated sint64   f_sint64   = 16 [ (json.field) = { } ];
  repeated sfixed32 f_sfixed32 = 17 [ (json.field) = { } ];
  repeated sfixed64 f_sfixed64 = 18 [ (json.field) = { } ];
  repeated fixed32  f_fixed32  = 19 [ (json.field) = { } ];
  repeated fixed64  f_fixed64  = 20 [ (json.field) = { } ];
  repeated float    f_float    = 21 [ (json.field) = { } ];
  repeated double   f_double   = 22 [ (json.field) = { } ];

  repeated bool f_bool1 = 31 [ (json.field) = { } ];

  repeated bytes f_bytes1 = 32 [ (json.field) = { } ];

  repeated EnumRepeated1                f_enum1 = 51 [ (json.field) = { } ];
  repeated external.Enum1               f_enum2 = 52 [ (json.field) = { } ];
  repeated external.Embed.Enum1         f_enum3 = 53 [ (json.field) = { } ];
  repeated external.Embed.Message.Enum1 f_enum4 = 54 [ (json.field) = { } ];
  repeated private.EnumCommon1          f_enum5 = 55 [ (json.field) = { } ];
  repeated private.MessageCommon1.Enum1 f_enum6 = 56 [ (json.field) = { } ];

  repeated google.protobuf.Duration f_duration1 = 61 [ (json.field) = { } ];
  repeated google.protobuf.Duration f_duration2 = 62 [ (json.field) = { } ];

  repeated google.protobuf.Timestamp f_timestamp1 = 63 [ (json.field) = { } ];
  repeated google.protobuf.Timestamp f_timestamp2 = 64 [ (json.field) = { } ];

  repeated google.protobuf.Any f_any1 = 65 [ (json.field) = { } ];
  repeated google.protobuf.Any f_any2 = 66 [ (json.field) = { } ];

  repeated MessageRepeated1                     f_message1 = 71 [ (json.field) = { } ];
  repeated MessageRepeated1.Embed1              f_message2 = 72 [ (json.field) = { } ];
  repeated MessageRepeated1.Embed1.Embed2       f_message3 = 73 [ (json.field) = { } ];
  repeated external.Message1                    f_message4 = 74 [ (json.field) = { } ];
  repeated external.Message1.Embed1             f_message5 = 75 [ (json.field) = { } ];
  repeated external.Message1.Embed1.Embed2      f_message6 = 76 [ (json.field) = { } ];
  repeated private.MessageCommon1               f_message7 = 77 [ (json.field) = { } ];
  repeated private.MessageCommon1.Embed1        f_message8 = 78 [ (json.field) = { } ];
  repeated private.MessageCommon1.Embed1.Embed2 f_message9 = 79 [ (json.field) = { } ];
}

